@@ -13,8 +13,9 @@
 (straight-use-package '(image-slicing :host github :repo "ginqi7/image-slicing"))
 (straight-use-package '(nerd-icons-multimodal :host github :repo "abougouffa/nerd-icons-multimodal"))
 (straight-use-package '(p-search :host github :repo "zkry/p-search"))
-(straight-use-package '(term-keys :host github :repo "CyberShadow/term-keys"))
 (straight-use-package '(popon :fork (:host codeberg :repo "fuzy/emacs-popon")))
+(straight-use-package '(rime :fork (:host github :repo "fuzy112/emacs-rime")))
+(straight-use-package '(term-keys :host github :repo "CyberShadow/term-keys"))
 (straight-use-package 'adaptive-wrap)
 (straight-use-package 'anaphora)
 (straight-use-package 'apheleia)
@@ -81,7 +82,6 @@
 (straight-use-package 'puni)
 (straight-use-package 'pyim)
 (straight-use-package 'pyim-basedict)
-(straight-use-package 'rime)
 (straight-use-package 'ruby-mode)
 (straight-use-package 'rust-mode)
 (straight-use-package 's)
