@@ -36,7 +36,7 @@
  ("eldoc-diffstat" . "33aa6d7ee5d0e712b112c74ec6e076463b540e9e")
  ("emacs-async" . "b99658e831bc7e7d20ed4bb0a85bdb5c7dd74142")
  ("emacs-request" . "01e338c335c07e4407239619e57361944a82cb8a")
- ("emacs-rime" . "80f09ed36d9f0ca7ce4e1a3ca1020dc4c80ba335")
+ ("emacs-rime" . "e2308772b74234debbc466904687db9e61409d7b")
  ("embark" . "d2daad08e04090391b3221fa95000492a1f8aabe")
  ("erc" . "48082373e09ebd3691d15ac1f6f1845bde15b96c")
  ("explain-pause-mode" . "2356c8c3639cbeeb9751744dbe737267849b4b51")
@@ -105,7 +105,7 @@
  ("toml-mode.el" . "f6c61817b00f9c4a3cab1bae9c309e0fc45cdd06")
  ("track-changes" . "76b59473e80aa365484712ba7bd04d327b7703a3")
  ("transducers.el" . "f8f46db6ddba6641669160fffb3f98213ab5b213")
- ("transient" . "5a18a79100bc5c4a5239f3917c1c1c4058a11769")
+ ("transient" . "280df1350bad1800501349b539d0b718ae60de65")
  ("vala-mode" . "d696a8177e94c81ea557ad364a3b3dcc3abbc50f")
  ("vertico" . "6ef99c9219b55b7618d111d352caf795ba07bc54")
  ("vundo" . "5374125dc0aaf1769bb0965344befb90f809ccfc")
