@@ -1,5 +1,9 @@
 2024-12-29  Zhengyi Fu  <i@fuzy.me>
 
+	* Fork rime and fix defcustom types
+
+	* Update packages.el
+
 	* site-lisp/dotemacs-core.el (after-load!): Fix handling of empty list
 
 	* init.el: save-file-hook doesn't exist, use after-save-hook instead
